# final-term-problem-from-multimedia

./: .gitignore  CMakeLists.txt  README.md  buildProject.bat
build-mac/: ALL_BUILD.vcxproj  CMakeCache.txt  Makefile  StudentApp  StudentApp.vcxproj  StudentApp.vcxproj.filters  Task2.1.vcxproj  Task2.1.vcxproj.filters  cmake_install.cmake
build-mac/StudentApp.dir/Debug/StudentApp.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.secondary.1.tlog
build-mac/Task2.1.dir/Debug/Task2.1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Task2.1.lastbuildstate  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-mac/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-mac/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
build-mac/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-mac/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
src/: CMakeLists.txt  main.cpp
src/2.1/: main.cpp
src/Knight/: Knight.cpp
src/model/: linkedList.hpp  student.cpp  student.h
src/problem-1/: main.cpp
src/problem-1/data/: DSSV.xlsx
src/problem-1/include/OpenXLSX/: CMakeLists.txt
src/problem-1/model/: data.cpp  data.h  output.cpp  output.h  student.cpp  student.h
src/problem-2.1/: main.cpp
src/service/dataImport/: dataImporter.h
src/test/: students.xlsx  testLinkedList.cpp  testLinkedList.h
